# figs

./: makefile  pyproject.toml  readme.md
fhirio/: __init__.py  __main__.py  init.ct  main.ct
figs/: __init__.py  __main__.py  init.ct  main.ct
test/: test.ct  test_figs.py
test/in/: 2025-09-26_16-12-56_Specimen_p0.json
