[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "fhirio"
version = "0.0.1"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "fhir export for cxx"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.scripts]
fhirio = "fhirio:__main__" # call command tr?

[tool.setuptools]
packages = ["fhirio"] # keep the package name short so that string constants can be accessed easily
